QOL touches, fixing spacing and alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,18 +34,54 @@ body {
     flex: 1;
 }
 
-/* Login form styles (Left side of Center Box) */
+/* Login form style (Left side of Center Box) */
 .loginForm {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    .formTitle { 
+        font-size: 34px;
+        align-self: flex-start;
+        margin-left: 75px;
+        margin-top: -100px;
+    }
+
+    .input [type="text"], .input [type="password"] {
+        width: 200px;
+        padding: 10px;
+        margin: 10px 0;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+
+    .UseOurSite {
+        font-size: 14px;
+        align-self: flex-start;
+        margin-left: 75px;
+        margin-bottom: -50px;
+    }
+
 }
 
-/* Welcome message styles (Right side of Center Box) */
+/* Welcome message style (Right side of Center Box) */
 .welcomeMessage{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
+
+    h1 {
+        font-size: 32px;
+        margin-bottom: 10px;
+        transform: translateX(-75px);
+    }
+    p {
+        font-size: 12px;
+        margin-bottom: 20px;
+        line-height: 2.0;
+        transform: translateX(-3px);
+    }
 }
